docs: add installation guide and replace README install section with a link
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>